fix: remove gray tap highlight on images/links/buttons on mobile (iOS/Android)

--- a/app/globals.css
+++ b/app/globals.css
@@ -6,6 +6,8 @@
     box-sizing: border-box;
     padding: 0;
     margin: 0;
+    -webkit-tap-highlight-color: transparent;
+    -webkit-touch-callout: none;
 }
 
 html,
@@ -196,6 +198,16 @@ img {
     max-width: 100%;
     height: auto;
     display: block;
+    -webkit-tap-highlight-color: transparent;
+    -webkit-touch-callout: none;
+    user-select: none;
+    -webkit-user-select: none;
+}
+
+a,
+button {
+    -webkit-tap-highlight-color: transparent;
+    -webkit-touch-callout: none;
 }
 
 /* Utility Classes */
